Renamed image file names and transferred image folder to public folder

--- a/public/output.css
+++ b/public/output.css
@@ -790,7 +790,7 @@ video {
 }
 
 .bg-bg1 {
-  background-image: url('../assets/bg1.jpg');
+  background-image: url('assets/bg1.jpg');
 }
 
 .bg-gradient-to-t {
