--- a/public/output.css
+++ b/public/output.css
@@ -627,6 +627,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -829,8 +833,8 @@ video {
   padding: 2.5rem;
 }
 
-.p-24 {
-  padding: 6rem;
+.p-36 {
+  padding: 9rem;
 }
 
 .p-4 {
