Adding poster designs as of 2:09 p.m.

--- a/public/output.css
+++ b/public/output.css
@@ -753,6 +753,10 @@ select {
   z-index: 50;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .mx-20 {
   margin-left: 5rem;
   margin-right: 5rem;
@@ -761,6 +765,10 @@ select {
 .my-20 {
   margin-top: 5rem;
   margin-bottom: 5rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
 }
 
 .mt-3 {
@@ -799,6 +807,10 @@ select {
   height: auto;
 }
 
+.h-svh {
+  height: 100svh;
+}
+
 .w-\[438px\] {
   width: 438px;
 }
@@ -821,6 +833,10 @@ select {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -841,8 +857,16 @@ select {
   justify-content: space-evenly;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.rounded-\[12px\] {
+  border-radius: 12px;
 }
 
 .rounded-\[15px\] {
@@ -852,6 +876,11 @@ select {
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
 .bg-lightMode {
@@ -867,6 +896,11 @@ select {
 .bg-slate-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
+}
+
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
 .p-12 {
@@ -890,6 +924,11 @@ select {
   line-height: 2rem;
 }
 
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
 .text-\[39\.06px\] {
   font-size: 39.06px;
 }
@@ -904,6 +943,10 @@ select {
 
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .font-semibold {
