--- a/public/output.css
+++ b/public/output.css
@@ -765,12 +765,32 @@ select {
   bottom: 13%;
 }
 
+.bottom-\[9\%\] {
+  bottom: 9%;
+}
+
+.left-\[33\%\] {
+  left: 33%;
+}
+
 .left-\[35\%\] {
   left: 35%;
 }
 
 .top-2 {
   top: 0.5rem;
+}
+
+.top-\[12\%\] {
+  top: 12%;
+}
+
+.top-\[14\%\] {
+  top: 14%;
+}
+
+.top-\[18\%\] {
+  top: 18%;
 }
 
 .z-50 {
@@ -883,8 +903,16 @@ select {
   min-height: 100svh;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .w-20 {
   width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-64 {
@@ -897,6 +925,21 @@ select {
 
 .w-\[438px\] {
   width: 438px;
+}
+
+.rotate-\[-15deg\] {
+  --tw-rotate: -15deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[15deg\] {
+  --tw-rotate: 15deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[180deg\] {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .select-none {
@@ -1079,6 +1122,10 @@ select {
   text-align: right;
 }
 
+.font-handwrite {
+  font-family: Playpen Sans;
+}
+
 .font-serif {
   font-family: Newsreader, serif;
 }
@@ -1103,6 +1150,11 @@ select {
 
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
