--- a/public/output.css
+++ b/public/output.css
@@ -761,12 +761,28 @@ select {
   position: sticky;
 }
 
-.bottom-\[13\%\] {
-  bottom: 13%;
+.bottom-\[20\%\] {
+  bottom: 20%;
 }
 
-.bottom-\[9\%\] {
-  bottom: 9%;
+.bottom-\[25\%\] {
+  bottom: 25%;
+}
+
+.bottom-\[33\%\] {
+  bottom: 33%;
+}
+
+.bottom-\[38\%\] {
+  bottom: 38%;
+}
+
+.left-\[11\%\] {
+  left: 11%;
+}
+
+.left-\[2\%\] {
+  left: 2%;
 }
 
 .left-\[33\%\] {
@@ -775,6 +791,26 @@ select {
 
 .left-\[35\%\] {
   left: 35%;
+}
+
+.left-\[40\%\] {
+  left: 40%;
+}
+
+.left-\[5\%\] {
+  left: 5%;
+}
+
+.left-\[7\%\] {
+  left: 7%;
+}
+
+.left-\[9\%\] {
+  left: 9%;
+}
+
+.top-16 {
+  top: 4rem;
 }
 
 .top-2 {
@@ -791,6 +827,18 @@ select {
 
 .top-\[18\%\] {
   top: 18%;
+}
+
+.top-\[45\%\] {
+  top: 45%;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .z-50 {
@@ -915,6 +963,10 @@ select {
   width: 6rem;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
 .w-64 {
   width: 16rem;
 }
@@ -927,8 +979,28 @@ select {
   width: 438px;
 }
 
+.rotate-\[-10deg\] {
+  --tw-rotate: -10deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-\[-15deg\] {
   --tw-rotate: -15deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-4deg\] {
+  --tw-rotate: -4deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-8deg\] {
+  --tw-rotate: -8deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[10deg\] {
+  --tw-rotate: 10deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -939,6 +1011,16 @@ select {
 
 .rotate-\[180deg\] {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[4deg\] {
+  --tw-rotate: 4deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[7deg\] {
+  --tw-rotate: 7deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1073,11 +1155,6 @@ select {
   background-color: rgb(243 242 250 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[radial-gradient\(circle_at_bottom_right\2c _\#4891CE\2c _transparent_40\%\)\] {
   background-image: radial-gradient(circle at bottom right, #4891CE, transparent 40%);
 }
@@ -1193,6 +1270,11 @@ select {
 .text-customGray {
   --tw-text-opacity: 1;
   color: rgb(110 110 110 / var(--tw-text-opacity, 1));
+}
+
+.text-darkMode {
+  --tw-text-opacity: 1;
+  color: rgb(5 5 5 / var(--tw-text-opacity, 1));
 }
 
 .text-lightMode {
